<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@xml/navigation_home_selector"
        android:title="@string/home_page"
        android:fontFamily="@font/iran_yekan"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@xml/navigation_category_selector"
        android:title="@string/category"
        android:fontFamily="@font/iran_yekan"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_shoppingBag"
        android:icon="@xml/navigation_shopping_bag_selector"
        android:title="@string/shopping_bag"
        android:fontFamily="@font/iran_yekan"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@xml/navigation_user_selector"
        android:title="@string/profile"
        android:fontFamily="@font/iran_yekan"
        app:showAsAction="always|withText" />


</menu>